docs/versioned_docs/version-3.16.0-LTS/setup/system-requirements.md
---
id: system-requirements
title: System Requirements 
---

This document covers all the system requirements for self-hosting ToolJet.

:::info
The official Docker tag for the Enterprise Edition is tooljet/tooljet:ee-lts-latest.
:::

## Operating Systems

### Supported Linux distribution

[ToolJet images](https://hub.docker.com/r/tooljet/tooljet/tags) can run on any Linux machine with x86 architecture (64-bit). Ensure that your system meets the minimum requirements specified below before installing ToolJet.

### Microsoft Windows

ToolJet is developed for Linux-based operating systems. Please consider using a virtual machine or Windows Subsystem for Linux 2 (WSL2) to run ToolJet on Windows.

## VM deployments:

- **Operating System:** Ubuntu 22.04 or later
- **Processor Architecture:** x86 (arm64 is not supported)
- **RAM:** 4GB
- **CPU:** 1 vCPU
- **Storage:** At least 8GiB, but can increase according to your requirements.

## Orchestrated Deployments:

- When employing container orchestration frameworks like Kubernetes, it's imperative to ensure that your cluster hosts at least one node equipped with the above specifications for seamlessly executing ToolJet deployments.

Note: Adjustments can be made based on specific needs and the expected load on the server.

## Database and Cache Software:

### PostgreSQL

- **Version:** PostgreSQL 16.x is recommended
- **Minimum Specifications:**
  - **RAM:** 8GB
  - **Storage:** 20GB minimum (should scale based on data volume)
  - **CPU:** 2 vCPUs

:::info
If you are currently on PostgreSQL 13.x, you may continue using it; however, upgrading to version 16.x is advised for improved performance and features. Additionally, PostgreSQL 13.x officially reached end-of-life in November 2025.
:::

### Redis

- **Version:** Redis 7.x is required
- **Minimum Specifications:**
  - **RAM:** 512MB (1GB recommended for production workloads)
  - **Storage:** 1GB minimum
  - **CPU:** 1 vCPU

:::info
Redis is used for caching and session management in ToolJet. Ensure that Redis 7.x is installed and running before deploying ToolJet.
:::

<br/>
---

## Need Help?

- Reach out via our [Slack Community](https://join.slack.com/t/tooljet/shared_invite/zt-2rk4w42t0-ZV_KJcWU9VL1BBEjnSHLCA)
- Or email us at [support@tooljet.com](mailto:support@tooljet.com)
- Found a bug? Please report it via [GitHub Issues](https://github.com/ToolJet/ToolJet/issues)
